--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -10,6 +10,6 @@
 		<title>Astro</title>
 	</head>
 	<body>
-		<h1>Aaron's Astro Site is awesome</h1>
+		<h1>Aaron's Astro Site is awesome!</h1>
 	</body>
 </html>
