adding HTML page navigation links

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -11,5 +11,7 @@
 	</head>
 	<body>
 		<h1>Aaron's Astro Site is awesome!</h1>
+		<a href="/">Home</a>
+		<a href="/about/">About</a>
 	</body>
 </html>
