--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -13,6 +13,8 @@
 		<h1>Aaron's Astro Site</h1>
 		<body>
 			<h1>My Astro Site</h1>
+			<a href="/">Home</a>
+			<a href="/about/">About</a>
 			<h1>About Me</h1>
 			<h2>... and my new Astro site!</h2>
 		  
