adding blog hyperlink to all pages

--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -13,6 +13,7 @@
 		<h1>Aaron's Astro Site is awesome!</h1>
 		<a href="/">Home</a>
 		<a href="/about/">About</a>
+        <a href="/blog/">Blog</a>
         <h1>Blog Home</h1>
 			<h2>This is my blog homepage!</h2>
 		  
