--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -13,5 +13,6 @@
 		<h1>Aaron's Astro Site is awesome!</h1>
 		<a href="/">Home</a>
 		<a href="/about/">About</a>
+		<a href="/blog/">Blog</a>
 	</body>
 </html>
