--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -16,7 +16,9 @@
         <a href="/blog/">Blog</a>
         <h1>Blog Home</h1>
 			<h2>This is my blog homepage!</h2>
-		  
 			<p>This is the third page of my Astro site and I'm definitely starting to get the hang of this! Keep on the lookout for my first blog post!</p>
+            <ul>
+                <li><a href="/posts/post-1/">Post 1</a></li>
+              </ul>
 	</body>
 </html>
