--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,4 +1,5 @@
 ---
+const pageTitle = "Blog Homepage"
 ---
 
 <html lang="en">
@@ -7,14 +8,13 @@
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="viewport" content="width=device-width" />
 		<meta name="generator" content={Astro.generator} />
-		<title>Astro</title>
+		<title>{pageTitle}</title>
 	</head>
 	<body>
-		<h1>Aaron's Astro Site is awesome!</h1>
 		<a href="/">Home</a>
 		<a href="/about/">About</a>
         <a href="/blog/">Blog</a>
-        <h1>Blog Home</h1>
+        <title>{pageTitle}</title>
 			<h2>This is my blog homepage!</h2>
 			<p>This is the third page of my Astro site and I'm definitely starting to get the hang of this! Keep on the lookout for my first blog post!</p>
             <ul>
