update blog page

--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -11,10 +11,11 @@ const pageTitle = "Blog Homepage"
 		<title>{pageTitle}</title>
 	</head>
 	<body>
-		<a href="/">Home</a>
-		<a href="/about/">About</a>
-        <a href="/blog/">Blog</a>
-        <title>{pageTitle}</title>
+        <body>
+		    <a href="/">Home</a>
+		    <a href="/about/">About</a>
+            <a href="/blog/">Blog</a>
+            <title>{pageTitle}</title>
 			<h2>This is my blog homepage!</h2>
 			<p>This is the third page of my Astro site and I'm definitely starting to get the hang of this! Keep on the lookout for my first blog post!</p>
             <ul>
@@ -22,5 +23,6 @@ const pageTitle = "Blog Homepage"
                 <li><a href="/posts/post-2/">Post 2</a></li>
                 <li><a href="/posts/post-3/">Post 3</a></li>
             </ul>
+        </body>
 	</body>
 </html>
