--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -15,7 +15,7 @@ const pageTitle = "Blog Homepage"
 		    <a href="/">Home</a>
 		    <a href="/about/">About</a>
             <a href="/blog/">Blog</a>
-            <title>{pageTitle}</title>
+            <h1>{pageTitle}</h1>
 			<h2>This is my blog homepage!</h2>
 			<p>This is the third page of my Astro site and I'm definitely starting to get the hang of this! Keep on the lookout for my first blog post!</p>
             <ul>
