--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -15,6 +15,6 @@ const pageTitle = "Homepage"
 		<a href="/">Home</a>
 		<a href="/about/">About</a>
 		<a href="/blog/">Blog</a>
-		<title>{pageTitle}</title>
+		<h1>{pageTitle}</h1>
 	</body>
 </html>
