--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,5 +1,18 @@
 ---
 const pageTitle = "About Me";
+
+---
+const pageTitle = "About Me";
+
+const identity = {
+  firstName: "Aaron",
+  country: "United States of America",
+  occupation: "Neuroengineer",
+  hobbies: ["electrochemistry", "robotics", "reading peer-reviewed papers"],
+};
+
+const skills = ["SEM", "EDS", "XPS", "Nanofabrication", "Astro", "Writing"];
+---
 ---
 
 <html lang="en">
@@ -21,6 +34,19 @@ const pageTitle = "About Me";
 			<p>I am working through Astro's introductory tutorial. This is the second page on my website, and it's the first one I built myself!</p>
 		  
 			<p>This site will update as I complete more of the tutorial, so keep checking back and see how my journey is going!</p>
+
+			<p>Here are a few facts about me:</p>
+			<ul>
+  				<li>My name is {identity.firstName}.</li>
+  				<li>I live in {identity.country} and I work as a {identity.occupation}.</li>
+  				{identity.hobbies.length >= 2 &&
+   				 <li>Two of my hobbies are: {identity.hobbies[0]} and {identity.hobbies[1]}</li>
+  				}
+			</ul>
+			<p>My skills are:</p>
+			<ul>
+  				{skills.map((skill) => <li>{skill}</li>)}
+			</ul>
 		  </body>
 	</body>
 </html>
