--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -8,6 +8,9 @@ const identity = {
 };
 
 const skills = ["SEM", "EDS", "XPS", "Nanofabrication", "Astro", "Writing"];
+const happy = true;
+const finished = false;
+const goal = 3;
 ---
 
 <html lang="en">
@@ -42,6 +45,11 @@ const skills = ["SEM", "EDS", "XPS", "Nanofabrication", "Astro", "Writing"];
 			<ul>
   				{skills.map((skill) => <li>{skill}</li>)}
 			</ul>
+			{happy && <p>I am happy to be learning Astro!</p>}
+
+			{finished && <p>I finished this tutorial!</p>}
+
+			{goal === 3 ? <p>My goal is to finish in 3 days.</p> : <p>My goal is not 3 days.</p>}
 		  </body>
 	</body>
 </html>
