--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -32,6 +32,12 @@ const goal = 3;
 			<a href="/">Home</a>
 			<a href="/about/">About</a>
 			<a href="/blog/">Blog</a>
+			<style>
+				h1 {
+				  color: navy;
+				  font-size: 4rem;
+				}
+			  </style>
 			<h1>{pageTitle}</h1>
 			<h2>... and my new Astro site!</h2>
 		  
