--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -37,6 +37,10 @@ const goal = 3;
 				  	color: navy;
 				  	font-size: 4rem;
 					}
+					.skill {
+    					color: green;
+    					font-weight: bold;
+  						}
 			  	</style>
 			<h1>{pageTitle}</h1>
 			<h2>... and my new Astro site!</h2>
@@ -55,7 +59,7 @@ const goal = 3;
 			</ul>
 			<p>My skills are:</p>
 			<ul>
-  				{skills.map((skill) => <li>{skill}</li>)}
+				{skills.map((skill) => <li class="skill">{skill}</li>)}
 			</ul>
 			{happy && <p>I am happy to be learning Astro!</p>}
 
