--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -20,13 +20,11 @@ const textCase =  "caps"
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="viewport" content="width=device-width" />
-		<meta name="generator" content={Astro.generator} />
 		<title>{pageTitle}</title>
 		<style>
 			h1 {
-			  color: navy;
+			  color: red;
 			  font-size: 4rem;
 			}
 			.skill {
