--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,10 @@
 ---
+import '../styles/global.css';
+import Navigation from '../components/Navigation.astro';
+import Footer from '../components/Footer.astro';
+
 const pageTitle = "Homepage"
+
 ---
 
 <html lang="en">
@@ -9,12 +14,17 @@ const pageTitle = "Homepage"
 		<meta name="viewport" content="width=device-width" />
 		<meta name="generator" content={Astro.generator} />
 		<title>{pageTitle}</title>
+		<style>
+			h1 {
+			  color: navy;
+			  font-size: 5rem;
+			}
+		</style>
 	</head>
 	<body>
 		
-		<a href="/">Home</a>
-		<a href="/about/">About</a>
-		<a href="/blog/">Blog</a>
+<Navigation />
 		<h1>{pageTitle}</h1>
+		<Footer/>
 	</body>
 </html>
